--- a/MatrixMultiply/MatrixMultiply.vcxproj
+++ b/MatrixMultiply/MatrixMultiply.vcxproj
@@ -156,6 +156,9 @@
   <ItemGroup>
     <ClCompile Include="MatrixMultiply.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mkl.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
